--- a/css/style.css
+++ b/css/style.css
@@ -39,12 +39,13 @@
     
 }
 
+
 .logomenu
 {
     display: flex;
-    justify-content: center;
+    justify-content: start;
     align-items: center;
-    padding: 0.5rem;
+    padding: 0.4rem;
     background-color: white;
 }
 
@@ -66,6 +67,7 @@ body
   .header h2
   {
     color: #394D57;
+    font-size: 2.4rem;
   }
   
   #navbar {
@@ -115,6 +117,11 @@ body
     padding-top: 60px;
   }
 
+  footer
+  {
+    height: 60vh;
+
+  }
 
 
 
