--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,7 @@
     justify-content: start;
     align-items: center;
     padding: 0.4rem;
-    background-color: white;
+    background-color: #9dffba;
 }
 
 
@@ -57,7 +57,7 @@ body
 
 
 .header {
-    background-color: #9dffba;
+    background-color: #b1fcc8;
     padding: 30px;
     text-align: center;
     height: 100vh;
@@ -99,8 +99,9 @@ body
   }
   
   #navbar a.active {
-    background-color: #0491aa;
+    background-color: #4FBED9;
     color: white;
+    font-weight: 600;
   }
   
   .content {
