--- a/css/style.css
+++ b/css/style.css
@@ -123,8 +123,105 @@ body
 
   footer
   {
-    height: 60vh;
+    height: 50vh;
+    background-color: #333;
+    color: #f2f2f2;
+    
 
+  }
+
+.footerlogo
+{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+.fim
+{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: 1rem;
+    justify-content: space-evenly;
+    
+}
+
+.fim p
+{
+    font-size: 0.8rem;
+    padding: 1rem;
+}
+
+
+#footer_social_media
+{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+    gap: 1.5rem;
+    margin-top: 1.5rem;
+
+}
+
+#footer_social_media .footer-link
+{
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 2.5rem;
+    width: 2.5rem;
+    color: var(--color-neutral-40);
+    transition: all 0.4s;
+    text-decoration: none;
+}
+
+#footer_social_media .footer-link i 
+{
+    font-size: 1.25rem;
+}
+
+#footer_social_media .footer-link:hover
+{
+    opacity: 0.8;
+}
+
+
+#instagram
+{
+    background: linear-gradient(#7f37c9, #ff2992, #ff9807);
+    
+}
+
+#facebook
+{
+    background-color: #4267B3;
+}
+
+#whatsapp
+{
+    background-color: #25d366;
+}
+
+
+  .containerfooter
+  {
+    display:grid;
+    height: 100%;
+    width: 100%;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+  }
+
+  .rodape
+  {
+    height: 6vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #2b2828;
   }
 
 
@@ -180,15 +277,14 @@ body
 
 
 
-  .zapbotaofloat
-{
+  .zapbotaofloat {
     position: fixed;
     bottom: 0rem;
     right: 0.1rem;
     z-index: 9999;
 }
 
-  .tooltip {
+.tooltip {
     width: 100%;
     height: 10px;
     background: #f8f6f6;
@@ -202,9 +298,10 @@ body
     transform-origin: center top;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.05);
     transition: opacity 0.3s ease-in-out;
-  }
-  
-  .tooltip::before {
+    animation-delay: 8s; /* Adiciona um delay de 8 segundos */
+}
+
+.tooltip::before {
     content: "";
     position: absolute;
     bottom: -8px;
@@ -214,56 +311,58 @@ body
     border-style: solid;
     border-color: #ffffff transparent transparent transparent;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.05);
-  }
-  
-  .tooltip p {
+}
+
+.tooltip p {
     margin: 0;
     color: #333;
     font-weight: 600;
     font-size: 0.7rem;
-    
-  }
-  
-  .zapbotaofloat:hover .tooltip {
+}
+
+.zapbotaofloat:hover .tooltip {
     top: -10px;
     opacity: 1;
     visibility: visible;
     animation: goPopup 0.5s cubic-bezier(0.68, -0.55, 0.27, 1.55) forwards;
-  }
-  
-  .zapbotaofloat:hover .tooltip p {
+}
+
+.zapbotaofloat:hover .tooltip p {
     animation: bounce 2s ease-in-out infinite;
-  }
-  
-  @keyframes goPopup {
+}
+
+@keyframes goPopup {
     0% {
-      transform: translateY(0) scaleY(0);
-      opacity: 0;
+        transform: translateY(0) scaleY(0);
+        opacity: 0;
     }
     50% {
-      transform: translateY(-50%) scaleY(1.2);
-      opacity: 1;
+        transform: translateY(-50%) scaleY(1.2);
+        opacity: 1;
     }
     100% {
-      transform: translateY(-100%) scaleY(1);
-      border-radius: 8px;
-      opacity: 1;
-      height: 40px;
+        transform: translateY(-100%) scaleY(1);
+        border-radius: 8px;
+        opacity: 1;
+        height: 40px;
     }
-  }
-  
-  @keyframes bounce {
+}
+
+@keyframes bounce {
     0%,
     20%,
     50%,
     80%,
     100% {
-      transform: translateY(0);
+        transform: translateY(0);
     }
     40% {
-      transform: translateY(-3px);
+        transform: translateY(-3px);
     }
     60% {
-      transform: translateY(-2px);
+        transform: translateY(-2px);
     }
-  }
+}
+
+
+
