--- a/css/content.css
+++ b/css/content.css
@@ -1,26 +1,140 @@
 @charset "UTF-8";
 
+
+section
+{
+    background-color: azure;
+    padding: 2rem;
+    gap: 2rem;
+}
+
 .sobre
 {
-    background-color: aliceblue;
+   
 }
 
 .comofunciona
 {
-    background-color: aqua;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(25, 78, 156);
+    border-radius: 8%;
+    margin: 5%;
+    color: #f1f1f1;
+    text-align: justify;
+    font-weight: 500;
+
+}
+
+.comofunciona h3
+
+{
+    font-size: 1.5rem;
 }
 
 .beneficios
 {
-    background-color: aquamarine;
+    
 }
+
 
 .cidadesatendidas
 {
-    background-color: violet;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    width: 100%;
 }
+
+
+.titlecidades
+{
+    display: flex;
+    position: relative;
+    width: 100%;
+    height: 46vh;
+    background-color: var(--color-cidades);
+    align-items: center;
+    justify-content: center;
+    font-size: 1rem;
+    font-weight: 800;
+}
+
+
+.card {
+    display: flex;
+    flex-direction:row;
+    align-items:center;
+    justify-content: space-around;
+    width: 240px;
+    height: 320px;
+    padding: 20px 1px;
+    margin: 10px 0;
+    text-align: center;
+    position: relative;
+    box-shadow: 0 10px 15px -3px rgba(57, 68, 64, 0.4),0 4px 6px -4px rgba(68, 243, 33, 0.4);
+    border-radius: 10px;
+    background: linear-gradient(45deg, #02111aea 0%, #085f75 100%);
+    flex-wrap: wrap;
+    
+  }
+
+  #cotia
+  {
+    background-color: rgb(80, 185, 255);
+  }
+ 
+
+  .content {
+    padding: 18px;
+  }
+  
+  .content .price {
+    color: white;
+    font-weight: 800;
+    font-size: 2rem;
+    text-shadow: 0px 0px 10px rgba(0, 0, 0, 0.42);
+    margin-top: 1.5rem;
+  }
+  
+  .content .description {
+    color: rgba(255, 255, 255, 0.6);
+    margin-top: 10px;
+    font-size: 14px;
+  }
+  
+  .content .title {
+    font-weight: 800;
+    text-transform: uppercase;
+    color: rgba(255, 255, 255, 0.64);
+    margin-top: 5px;
+    font-size: 1rem;
+    letter-spacing: 1px;
+  }
+  
+  button {
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    user-select: none;
+    border: none;
+    outline: none;
+    color: rgb(255 255 255);
+    text-transform: uppercase;
+    font-weight: 700;
+    font-size: 0.75rem;
+    padding: 0.75rem 1.5rem;
+    background-color: rgb(153, 152, 152);
+    border-radius: 0.5rem;
+    width: 8rem;
+    text-shadow: 0px 4px 18px #2c3442;
+    cursor: pointer;
+  }
 
 .depoimentos
 {
-    background-color: blanchedalmond;
+    
 }
