--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,7 @@
 }
 
 
+
 .logomenu
 {
     padding: 0.2rem;
@@ -49,7 +50,8 @@
 
 body
 {
-    background-color: #faaeae;
+    display: flex;
+    flex-direction: column;
 }
 
 
@@ -58,7 +60,7 @@ body
     padding: 30px;
     text-align: center;
     height: 100vh;
-   
+    
   }
 
   .header h2
@@ -75,6 +77,7 @@ body
     justify-content: space-evenly;
     flex-direction: row;
     flex-wrap: wrap;
+    z-index: 999;
   }
 
 .menuitems
@@ -117,15 +120,20 @@ body
     width: 100%;
   }
   
-  .sticky + .content {
+  .sticky .content {
     padding-top: 60px;
   }
 
   footer
   {
-    height: 50vh;
+    display: flex;
+    flex-direction: column;
+    height: 36vh;
+    bottom: 0;
     background-color: #333;
     color: #f2f2f2;
+    flex-wrap: wrap;
+    
     
 
   }
@@ -135,6 +143,7 @@ body
     display: flex;
     align-items: center;
     flex-direction: column;
+    
 }
 
 .fim
@@ -162,6 +171,7 @@ body
     
     gap: 1.5rem;
     margin-top: 1.5rem;
+    
 
 }
 
@@ -217,11 +227,18 @@ body
 
   .rodape
   {
-    height: 6vh;
+    width: 100%;
+    height: 4rem;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     background-color: #2b2828;
+    font-size: 0.7rem;
+    font-weight: 200;
+    color:#fff;
+    bottom: 0;
+
   }
 
 
