--- a/css/content.css
+++ b/css/content.css
@@ -41,18 +41,31 @@ section
     display: flex;
     flex-direction: column;
     gap: 2rem;
+    align-items: center;
+    justify-content: center;
+}
+
+.titulosbeneficios
+{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  text-align: justify];
 }
 
 .cardbottom {
   display: flex;
+  flex-direction: column;
   font-size: 1rem;
   justify-content: center;
   align-items: center;
   text-transform: uppercase;
-  font-weight: 800;
-  padding: 3vh;
-  width: 35vh;
-  height: 27vh;
+  font-weight: 700;
+  gap: 0.8rem;
+  padding: 1rem;
+  width: 16rem;
+  height: 40rem;
   border-radius: 5vh;
   background: #ffffff;
   color: #105566;
@@ -66,7 +79,7 @@ section
  {
   margin-top: 3%;
   color: #105566;
-  font-size: 2.5rem;
+  font-size: 1.8rem;
   font-weight: 900;
  
  }
@@ -213,10 +226,3 @@ section
     cursor: pointer;
   }
 
-.depoimentos
-{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-    
-}
