--- a/css/mediaquery.css
+++ b/css/mediaquery.css
@@ -12,7 +12,7 @@
     }
     .header .banner
     {
-       width: 60%;
+       width: 78%;
     
     }
 
@@ -24,7 +24,7 @@
     .herobanner
 {
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
     width: 100%;
     padding: 3rem;
 }
@@ -77,7 +77,7 @@
         text-align: center;
         height: 100vh;
       }
-      
+      isão Saudável, Compromisso Social Com o Olhos do Bem, priorizamos o cuidado com a saúde ocular e o compromisso social. Nosso objetivo é proporcionar testes visuais de qualidade, acessíveis a todos, promovendo a visão de um futuro mais claro e inclusivo.
 
     .header .banner
     {
