--- a/css/content.css
+++ b/css/content.css
@@ -43,6 +43,7 @@ section
     gap: 2rem;
     align-items: center;
     justify-content: center;
+    position: relative;
 }
 
 .titulosbeneficios
@@ -65,12 +66,12 @@ section
   gap: 0.8rem;
   padding: 1rem;
   width: 16rem;
-  height: 40rem;
+  height: 12rem;
   border-radius: 5vh;
   background: #ffffff;
   color: #105566;
-  box-shadow: 3px 3px 10px #bebebe,
-                -3px -3px 10px #e0f5dd;
+  box-shadow: 1px 1px 5px #bebebe,
+                -3px -3px 5px #e0f5dd;
                
               
  }
@@ -105,13 +106,14 @@ section
  {
     margin-top: 1%;
     width: 100%;
-    height: 80vh;
+    height: fit-content;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
     text-justify:inter-word;
     gap: 2rem;
+    flex-wrap: wrap;
     
  }
 
