--- a/css/content.css
+++ b/css/content.css
@@ -147,14 +147,9 @@ section
 
 .titlecidades
 {
-    display: flex;
-    position: relative;
-    width: 100%;
-    background-color: var(--color-cidades);
-    align-items: center;
-    justify-content: center;
-    font-size: 1rem;
-    font-weight: 800;
+  color: #105566;
+  font-size: 1.8rem;
+  font-weight: 900;
 }
 
 
