--- a/css/content.css
+++ b/css/content.css
@@ -8,10 +8,7 @@ section
     gap: 2rem;
 }
 
-.sobre
-{
-   
-}
+
 
 .comofunciona
 {
@@ -20,7 +17,7 @@ section
     justify-content: center;
     align-items: center;
     background-color: rgb(25, 78, 156);
-    border-radius: 8%;
+    border-radius: 2rem;
     margin: 5%;
     color: #f1f1f1;
     text-align: justify;
@@ -52,7 +49,7 @@ section
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  text-align: justify];
+  text-align: justify;
 }
 
 .cardbottom {
@@ -231,6 +228,15 @@ section
     cursor: pointer;
   }
 
+.space{
+  width: 100%;
+  height: 25vh;
+}
 
 
-  
+
+
+
+
+
+
