--- a/css/mediaquery.css
+++ b/css/mediaquery.css
@@ -29,6 +29,47 @@
     padding: 3rem;
 }
 
+.page3
+{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#cidades
+{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+}
+
+.cidadessaopaulo
+{
+    padding: 3rem;
+    font-size: 1.8rem;
+}
+
+.titlecidades
+{
+    font-size: 5rem;
+    padding: 3rem;
+    text-align: center;
+}
+
+.cartoes
+{
+    display: flex;
+    flex-direction: row;
+}
+
+.pq
+{
+    font-size: 4.6rem;
+    text-transform: uppercase;
+    text-align: center;
+}
 
 
 }
@@ -61,6 +102,23 @@
     padding: 3rem;
 }
 
+#cidades
+{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    flex-wrap: nowrap;
+}
+
+.cartoes
+{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+}
+
 }   
 
 /* TVS, TELAS ENORMES */
@@ -77,7 +135,6 @@
         text-align: center;
         height: 100vh;
       }
-      isão Saudável, Compromisso Social Com o Olhos do Bem, priorizamos o cuidado com a saúde ocular e o compromisso social. Nosso objetivo é proporcionar testes visuais de qualidade, acessíveis a todos, promovendo a visão de um futuro mais claro e inclusivo.
 
     .header .banner
     {
@@ -97,5 +154,6 @@
     width: 100%;
     padding: 3rem;
 }
+
 
 }
